k8s/contour/test.yml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: test-bart
  namespace: monitoring
spec: 
  virtualhost:
    fqdn: bart.k8s.ldc.int
  routes: 
    - match: /
      services:
        - name: grafana
          port: 3000
